# FNUXXMLparser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Fnux.xml  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
config/: llm_config.example.yaml
docs/: API.md
src/fnuxxmlparser/: __init__.py  config.py  parser.py  xml_parser.py
tests/: __init__.py  test_parser.py
